--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:id="@+id/ivBookCover"
-        android:layout_marginTop="8dp"
         android:layout_width="280dp"
-        android:layout_height="280dp" />
+        android:layout_height="280dp"
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:id="@+id/tvTitle"
